[metadata]
name = mara
version = 0.0.1
url = https://github.com/mara/readthedocs
description = Configuration and monitoring of database connections
long_description = file: README.md
long_description_content_type = text/markdown
author = Mara contributors
license = MIT

[options]
python_requires = >= 3.6
